--- a/src/css/style.css
+++ b/src/css/style.css
@@ -250,7 +250,7 @@ body {
   margin-bottom: 2rem;
   animation: fade-in 1.5s ease-out;
 }
-@media only screen and (max-width: 36.875em) {
+@media only screen and (max-width: 37.5em) {
   .hero__text--big {
     letter-spacing: 0rem;
   }
@@ -263,7 +263,7 @@ body {
   animation: fade-in 1.5s ease-out 1s;
   animation-fill-mode: backwards;
 }
-@media only screen and (max-width: 36.875em) {
+@media only screen and (max-width: 37.5em) {
   .hero__text--small {
     letter-spacing: 0rem;
   }
@@ -337,7 +337,7 @@ body {
   display: inline-block;
   margin: 0 1.5rem;
 }
-@media only screen and (max-width: 44.25em) {
+@media only screen and (max-width: 51.5em) {
   .nav-horizontal__item {
     display: none;
   }
@@ -393,6 +393,11 @@ body {
   font-weight: 500;
   padding: 1rem 2rem;
   transition: all 0.2s ease-out;
+}
+@media only screen and (max-width: 37.5em) {
+  .nav-horizontal__action-link--login {
+    text-align: right;
+  }
 }
 .nav-horizontal__action-link:hover {
   color: #03B670;
@@ -1138,6 +1143,11 @@ body {
   overflow: hidden;
   border-radius: inherit;
 }
+@media only screen and (max-width: 37.5em) {
+  .register-form__image-box {
+    display: none;
+  }
+}
 .register-form__image {
   max-width: 100%;
   height: 100%;
@@ -1152,6 +1162,12 @@ body {
   flex-direction: column;
   justify-content: space-between;
   align-items: stretch;
+}
+@media only screen and (max-width: 37.5em) {
+  .register-form__form-box {
+    padding-left: 0rem;
+    padding: 6rem 2rem;
+  }
 }
 .register-form__title-box {
   margin-bottom: 6rem;
@@ -1346,6 +1362,11 @@ body {
   overflow: hidden;
   border-radius: inherit;
 }
+@media only screen and (max-width: 37.5em) {
+  .login-form__image-box {
+    display: none;
+  }
+}
 .login-form__image {
   max-width: 100%;
   height: 100%;
@@ -1360,6 +1381,12 @@ body {
   flex-direction: column;
   justify-content: space-between;
   align-items: stretch;
+}
+@media only screen and (max-width: 37.5em) {
+  .login-form__form-box {
+    padding-right: 0rem;
+    padding: 6rem 2rem;
+  }
 }
 .login-form__title-box {
   margin-bottom: 4rem;
@@ -2937,7 +2964,7 @@ body {
     grid-template-columns: repeat(auto-fit, minmax(40rem, 1fr));
   }
 }
-@media only screen and (max-width: 36.875em) {
+@media only screen and (max-width: 37.5em) {
   .niche-section {
     padding: 20rem 0rem;
   }
@@ -2972,7 +2999,7 @@ body {
     grid-template-columns: repeat(auto-fit, minmax(35rem, 1fr));
   }
 }
-@media only screen and (max-width: 36.875em) {
+@media only screen and (max-width: 37.5em) {
   .benefits {
     padding: 20rem 10rem 22.5rem 0rem;
   }
@@ -3001,7 +3028,7 @@ body {
   justify-self: center;
   align-self: end;
 }
-@media only screen and (max-width: 36.875em) {
+@media only screen and (max-width: 37.5em) {
   .features {
     padding: 25rem 0rem 20rem 0rem;
   }
@@ -3032,7 +3059,7 @@ body {
     grid-template-columns: repeat(auto-fit, minmax(40rem, 1fr));
   }
 }
-@media only screen and (max-width: 36.875em) {
+@media only screen and (max-width: 37.5em) {
   .testimonials-section {
     padding: 20rem 0rem;
   }
