--- a/src/css/style.css
+++ b/src/css/style.css
@@ -15,7 +15,7 @@
 html {
   font-size: 62.5%;
 }
-@media only screen and (max-width: 56.25em) {
+@media only screen and (max-width: 81.25em) {
   html {
     font-size: 50%;
   }
@@ -433,6 +433,12 @@ body {
   background-color: #2d302e;
   color: #f1f4f2;
 }
+@media only screen and (max-width: 81.25em) {
+  .nav-vertical {
+    grid-column: 1/-1;
+    grid-row: nav-start/nav-end;
+  }
+}
 .nav-vertical__list {
   list-style: none;
   width: 100%;
@@ -441,9 +447,20 @@ body {
   flex-direction: column;
   justify-content: flex-start;
 }
+@media only screen and (max-width: 81.25em) {
+  .nav-vertical__list {
+    flex-direction: row;
+    justify-content: space-around;
+  }
+}
 .nav-vertical__item {
   width: 100%;
   height: 7rem;
+}
+@media only screen and (max-width: 81.25em) {
+  .nav-vertical__item {
+    width: auto;
+  }
 }
 .nav-vertical__item:first-child {
   margin-top: 3rem;
@@ -480,6 +497,12 @@ body {
   color: #f1f4f2;
   text-decoration: none;
 }
+@media only screen and (max-width: 81.25em) {
+  .nav-vertical__link, .nav-vertical__link:link, .nav-vertical__link:visited {
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+}
 .nav-vertical__link:hover::after {
   height: 100%;
   width: 100%;
@@ -509,6 +532,16 @@ body {
 .nav-vertical__icon-box > * {
   width: 100%;
   height: 100%;
+}
+@media screen and (max-width: 39em) {
+  .nav-vertical__icon-box {
+    margin: 0.75rem;
+  }
+}
+@media screen and (max-width: 39em) {
+  .nav-vertical__text-box {
+    display: none;
+  }
 }
 .nav-vertical > button {
   position: absolute;
@@ -2920,6 +2953,14 @@ body {
   grid-template-rows: [page-top] 90vh [page-bottom];
   grid-gap: 3rem;
   box-shadow: 0 2rem 6rem rgba(0, 0, 0, 0.2);
+}
+@media only screen and (max-width: 81.25em) {
+  .app-layout {
+    height: 100vh;
+    margin: 0;
+    grid-template-rows: [nav-start] 5.2vh [nav-end page-top] 92vh [page-bottom];
+    grid-template-columns: [page-start] 1fr [page-end];
+  }
 }
 
 .presenter-grid {
