--- a/src/sass/components/_nav-vertical.scss
+++ b/src/sass/components/_nav-vertical.scss
@@ -1,161 +1,188 @@
 @use "../abstracts/" as *;
+@use "../base/" as *;
 
 .nav-vertical {
-    position: relative;
-    grid-column: nav-start / nav-end;
-    grid-row: 1 / -1;
+  position: relative;
+  grid-column: nav-start / nav-end;
+  grid-row: 1 / -1;
 
-    // This prevents logout button to be at the bottom of the page
-    // and do not dissapear if there is too much information
-    max-height: inherit;
+  // This prevents logout button to be at the bottom of the page
+  // and do not dissapear if there is too much information
+  max-height: inherit;
 
-    $nav-background-color: $color-grey-dark-5;
-    background-color: $nav-background-color;
-    color: $color-grey-light-3;
+  $nav-background-color: $color-grey-dark-5;
+  background-color: $nav-background-color;
+  color: $color-grey-light-3;
 
-    &__list {
-        list-style: none;
+  @media only screen and (max-width: $bp-largest) {
+    grid-column: 1 / -1;
+    grid-row: nav-start / nav-end;
+  }
+
+  &__list {
+    list-style: none;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+
+    @media only screen and (max-width: $bp-largest) {
+      flex-direction: row;
+      justify-content: space-around;
+    }
+  }
+
+  &__item {
+    width: 100%;
+    height: 7rem;
+
+    @media only screen and (max-width: $bp-largest) {
+      width: auto;
+    }
+
+    &:first-child {
+      margin-top: 3rem;
+    }
+
+    &:not(:last-child) {
+      margin-bottom: 1rem;
+    }
+
+    &--logout {
+      margin-top: auto;
+      margin-bottom: 3rem;
+      font-weight: 500;
+
+      button {
         width: 100%;
+      }
+    }
+
+    &--disabled {
+      & > * {
+        cursor: not-allowed !important;
+        color: $color-grey-light-1 !important;
+      }
+
+      & > *:active,
+      & > *:link,
+      & > *:visited,
+      & > *::after {
+        background-color: transparent !important;
+      }
+    }
+  }
+
+  &__link {
+    &,
+    &:link,
+    &:visited {
+      position: relative;
+      z-index: 2;
+
+      display: flex;
+      justify-content: start;
+      align-items: center;
+      height: 100%;
+      padding-left: 2rem;
+      padding-right: auto;
+      font-weight: 500;
+
+      transition: all 0.2s;
+
+      color: $color-grey-light-3;
+      text-decoration: none;
+
+      @media only screen and (max-width: $bp-largest) {
+        padding-left: 1rem;
+        padding-right: 1rem;
+      }
+    }
+
+    &:hover {
+      &::after {
         height: 100%;
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-start;
-    }
-
-    &__item {
         width: 100%;
-        height: 7rem;
-
-        &:first-child {
-            margin-top: 3rem;
-        }
-
-        &:not(:last-child) {
-            margin-bottom: 1rem;
-        }
-
-        &--logout {
-            margin-top: auto;
-            margin-bottom: 3rem;
-            font-weight: 500;
-
-            button {
-                width: 100%;
-            }
-        }
-
-        &--disabled {
-
-            &>* {
-                cursor: not-allowed !important;
-                color: $color-grey-light-1 !important;
-            }
-
-            &>*:active,
-            &>*:link,
-            &>*:visited,
-            &>*::after {
-                background-color: transparent !important;
-            }
-        }
+      }
     }
 
-    &__link {
+    &::after {
+      content: "";
+      display: inline-block;
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: -1;
 
-        &,
-        &:link,
-        &:visited {
-            position: relative;
-            z-index: 2;
+      transition: height 0.2s cubic-bezier(1, 0, 0, 1),
+        width 0.4s cubic-bezier(1, 0, 0, 1) 0.2s;
 
-            display: flex;
-            justify-content: start;
-            align-items: center;
-            height: 100%;
-            padding-left: 2rem;
-            padding-right: auto;
-            font-weight: 500;
-
-            transition: all 0.2s;
-
-            color: $color-grey-light-3;
-            text-decoration: none;
-        }
-
-        &:hover {
-            &::after {
-                height: 100%;
-                width: 100%;
-            }
-        }
-
-        &::after {
-            content: "";
-            display: inline-block;
-            position: absolute;
-            top: 0;
-            left: 0;
-            z-index: -1;
-
-            transition: height 0.2s cubic-bezier(1, 0, 0, 1),
-                width 0.4s cubic-bezier(1, 0, 0, 1) .2s, ;
-
-            width: 2%;
-            height: 0;
-            background-color: $color-primary;
-        }
-
-        &--active,
-        &:active {
-
-            &,
-            &::after {
-                height: 100%;
-                width: 100%;
-                background-color: $color-primary-dark;
-            }
-        }
+      width: 2%;
+      height: 0;
+      background-color: $color-primary;
     }
 
-    &__icon-box {
-        margin-right: 1.5rem;
-        width: 3rem;
-        height: 3rem;
+    &--active,
+    &:active {
+      &,
+      &::after {
+        height: 100%;
+        width: 100%;
+        background-color: $color-primary-dark;
+      }
+    }
+  }
 
-        &>* {
-            width: 100%;
-            height: 100%;
-        }
+  &__icon-box {
+    margin-right: 1.5rem;
+    width: 3rem;
+    height: 3rem;
+
+    & > * {
+      width: 100%;
+      height: 100%;
     }
 
-    &>button {
-        // To make the flag as background
-        position: absolute;
-        bottom: 0;
-        left: 1.5rem;
-        text-transform: uppercase;
-        width: 3.5rem;
-        height: 3.5rem;
-        text-align: center;
-        padding: 0;
-        background-color: rgba($nav-background-color, .7);
-        font-size: 1.1rem;
+    @media screen and (max-width: $bp-large) {
+      margin: 0.75rem;
+    }
+  }
 
-        color: $color-grey-light-1;
+  &__text-box {
+    @media screen and (max-width: $bp-large) {
+      display: none;
+    }
+  }
 
-        &:hover {
-            color: $color-grey-light-2;
-        }
+  & > button {
+    // To make the flag as background
+    position: absolute;
+    bottom: 0;
+    left: 1.5rem;
+    text-transform: uppercase;
+    width: 3.5rem;
+    height: 3.5rem;
+    text-align: center;
+    padding: 0;
+    background-color: rgba($nav-background-color, 0.7);
+    font-size: 1.1rem;
 
-        &:active {
-            color: $color-grey-light-3;
-        }
+    color: $color-grey-light-1;
+
+    &:hover {
+      color: $color-grey-light-2;
     }
 
-    &__change-language-btn {
-        &--disabled {
-            cursor: not-allowed !important;
-            color: $color-grey-light-1 !important;
-        }
+    &:active {
+      color: $color-grey-light-3;
     }
+  }
+
+  &__change-language-btn {
+    &--disabled {
+      cursor: not-allowed !important;
+      color: $color-grey-light-1 !important;
+    }
+  }
 }
